 [metadata]
 name = puppet-tools
 version = 0.0.1
 author = Bertus Wisman
 description = Puppet CLI tool for linting, validating
 home-page = https://www.github.com/Catman155/puppet-tools
 classifier =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6

 [options]
 install_requires = termcolor
 python_requires = >= 3.6

 [options.entry_points]
 console_scripts = puppet-tools=puppet_tools.main:entry